RESOLVED FIXED119458
Incorrect type speculation reported by ToPrimitive
https://bugs.webkit.org/show_bug.cgi?id=119458
Summary Incorrect type speculation reported by ToPrimitive
Oliver Hunt
Reported 2013-08-02 13:41:15 PDT
Incorrect type speculation reported by ToPrimitive
Attachments
Patch (1.76 KB, patch)
2013-08-02 13:42 PDT, Oliver Hunt
mhahnenberg: review+
Oliver Hunt
Comment 1 2013-08-02 13:42:26 PDT
Mark Hahnenberg
Comment 2 2013-08-02 14:58:12 PDT
What's the steps to repro the crash?
Oliver Hunt
Comment 3 2013-08-02 15:00:41 PDT
(In reply to comment #2) > What's the steps to repro the crash? <rdar://problem/14580940>
Mark Hahnenberg
Comment 4 2013-08-02 15:33:55 PDT
Comment on attachment 208043 [details] Patch r=me
Oliver Hunt
Comment 5 2013-08-02 15:37:21 PDT
Note You need to log in before you can comment on or make changes to this bug.